--- a/src/App.css
+++ b/src/App.css
@@ -16,15 +16,14 @@
 }
 
 .corpo {
-  margin-right: 5%;
-  margin-left: 5%;
+  margin-right: 10%;
+  margin-left: 10%;
+  margin-bottom: 5%;
   font-size: 0.7em;
   color: #000000;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
   grid-area: main;
   /* border: 1px solid black; */
-
-
 }
 
 .centralizar {
@@ -64,10 +63,7 @@
   background-color: #eb240a;
 }
 
-
-
 .botao {
-
   padding: 0.3em;
   transition: all 200ms;
   color: #000000;
@@ -90,7 +86,6 @@
   background-color: #ffffff;
   box-shadow: 4px 4px teal;
   position: relative;
-
   background: #caf3f8;
 }
 
@@ -105,19 +100,30 @@ article {
   margin-right: 1%;
   border-radius: 0.5em;
   margin-bottom: 2%;
-  background-color: rgba(4, 167, 167, 0.164);
+  /* background-color: rgba(4, 167, 167, 0.164); */
+  background-color: rgba(30, 215, 95, 0.164);
+}
+
+article:hover {
+  background-color: rgba(30, 215, 95, 0.76);
+  
+}
+
+article img{
+  height: 200px;
+  width: auto;
 }
 
 h2 {
   font-size: 4vmin;
-  margin: 60px 0 50px 0;
+  margin: 60px 0 70px 0;
 }
 
-.showImage {
-  width: 65%;
+.textinho {
+  text-align: start;
+  font-style: normal;
+  margin: 0 0 70px 0;
 }
-
-
 
 
 /*  LISTAGEM DE 3 OPCOES CSS */
@@ -134,7 +140,7 @@ h2 {
   width: 30%;
   margin: 10px;
   text-align: center;
-  height: 9vmin;
+  height: 130px;
   font-size: 20px;
   font-style: bold;
   border: none;
@@ -144,7 +150,7 @@ h2 {
   color: white;
 }
 .showOptions button:hover{
-  background-color: #276e30;
+  background-color: #1ed760;
   transition:100ms
 }
 
@@ -204,35 +210,63 @@ a:visited {
   font-family: Georgia, 'Times New Roman', Times, serif;
   font-size: 23px;
   justify-content: center;
-  margin-left: 8%;
-  margin-right: 8%;
+  /* margin-left: 3%;
+  margin-right: 3%; */
 }
 
 .topHome div{
   display: inline-block;
   width: 33%;
   box-sizing: border-box;
-  border-bottom: 4.5px solid rgba(121, 121, 121, 0.377);
+  border-bottom: 3.5px solid rgba(121, 121, 121, 0.377);
   border-radius: 130%;
   padding-bottom: 50px;
   margin-bottom: 50px;
   border-top: 1px solid rgba(117, 117, 117, 0.082);
 }
 
+.topHome div:hover {
+  background-color: #1ed760;
+  color:white;
+  transition: 200ms;
+}
+
 .topHome img{
   width: auto;
-  height: 270px;
+  height: 220px;
   border-radius: 10%;
+}
+
+.containerGraficos{
+
+  display: flex;
+  flex-wrap: wrap;
+}
+
+
+.grafico{
+
+
+  margin: 0 20px 0 20px;  
+
 }
 
 .containerRecomendacoes{
   display: flex;
   flex-wrap: wrap;
-  font-size: 10px;
+  font-size: 17px;
   font-style: italic;
   justify-content: center;
+  font-family: Georgia, sans-serif;
+  /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
+  /* font-family:  */
+
 }
 
-.recomendacoes {
-  width: 20%
+.containerRecomendacoes article{
+  width: 18%;
 }
+.containerRecomendacoes img {
+  height: 150px;
+}
+
